# ddg_extension

./: .gitignore  CHANGES.md  Makefile  README.md  pyproject.toml  test_mcp_server.py  test_search.py
.github/workflows/: checks.yml  release.yml
src/ddg_extension/: __init__.py  mcp_server.py  search.py
tests/: test_search.py
