[project]
name = "ddg-extension"
version = "1.0.0"
description = "DuckDuckGo search MCP server for Goose"
readme = "README.md"
authors = [
    { name = "Edward Bunt", email = "edwardbunt@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "mcp[cli]>=1.27.1",
]

[project.scripts]
ddg-mcp-server = "ddg_extension.mcp_server:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "ruff>=0.14.6",
    "ty>=0.0.1a23",
]
